About Section almost done, just need to fix alignment.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Verdana, Tahoma, sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -50,7 +50,7 @@ img {
 }
 
 img:hover {
-    animation: scale 4s ease-in-out infinite;
+    animation: scale 2.5s ease-in-out infinite;
 }
 
 
@@ -75,12 +75,6 @@ button:hover {
     cursor:pointer;
     animation: button-wiggle .5s ease-in-out infinite;
     
-}
-
-h2 {
-    font-size: 36px;
-    font-weight: bolder;
-    color: #1F2937;
 }
 .slogan {
     color: #f9faf8;
@@ -146,8 +140,6 @@ h2 {
     max-height: 300px; /* Set your desired maximum height */
     overflow: hidden; /* Hide the overflowed content */
     position: relative; /* Establish positioning context */
-  
-    /* Center the image horizontally and vertically */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -164,10 +156,75 @@ h2 {
     font-style: italic;
     color: #1F2937;
 }
-section {
-    padding: 40px;
-    text-align: center;
+
+.section-about {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    margin: 0 auto;
+    padding-top: 36px;
+    padding-left: 400px;
+    padding-right: 400px;
+    padding-bottom: 72px;
 }
+    .section-title {
+        font-size: 36px;
+        font-weight: bolder;
+        color: #1F2937;
+        display: flex;
+        flex: 1;
+        justify-content: center;
+
+    }
+
+    .section-content {
+        flex: 1;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        justify-items: center;
+        padding-top: 36px;
+    }
+        .section-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            align-items: center;
+            align-content: center;
+        
+        }
+            .box-text {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                align-items: center;
+                align-content: center;
+                align-self: center;
+                text-align: center;
+                padding: 16px;
+                
+            }
+
+            .box-img {
+                max-height: 200px; /* Set your desired maximum height */
+                max-width: 200px;
+                overflow: hidden; /* Hide the overflowed content */
+                position: relative; /* Establish positioning context */
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                align-content: center;
+                align-self: center;
+                border-color: #3882f6;
+                border-style: solid;
+                border-width: thick;
+                border-radius: 24px;
+                
+            }
+
 footer {
     background-color: #1f2937;
     color: #fff;
